adapt after merge